--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,24 @@
 /* I like this https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
+.top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .parent {
   display: flex;
+  height: 450px;
+  width: 85%;
+  background-color: blue;
+  margin-right: 70px;
 }
 
 .leftSide {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 20%;
+  width: 22%;
 }
 
 .leftSide div {
@@ -19,7 +30,7 @@
 }
 
 .buttonSpace {
-  width: 40%;
+  width: 45%;
   background-color: yellow;
 }
 
@@ -31,17 +42,20 @@ ul {
 }
 
 .barSpace {
-  width: 10%;
+  width: 7%;
   background-color: white;
 }
 
 .stopBar {
-  width: 5%;
-  background-color: red;
+  margin-left: 2px;
+  width: 10%;
+  background-color: white;
 }
 
 .stopButton {
   width: 100%;
-  background-color: orange;
-  margin-top: 20px;
+  background-color: white;
+  height: 50px;
+  width: 40px;
+  margin: 30px 0px 0px 30px;
 }
