--- a/src/ButtonSpace.css
+++ b/src/ButtonSpace.css
@@ -1,17 +1,32 @@
 .buttonLi {
-  height: 11%;
+  height: 25%;
+  width: 100%;
+}
+
+.dummyLi {
+  height: 25%;
   width: 100%;
 }
 
 .chordButton {
-  height: 80%;
+  height: 60%;
   width: 5%;
   background-color: white;
-  margin: 10px 10px 10px 10px;
+  margin-right: 4.3%;
 }
 
-#rowList {
+#buttonList {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-right: 10%;
+}
+
+#buttonDiv {
+  height: 80%;
+  /*background-color: red;*/
+  background-image: url('./images/chord_outline.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
