--- a/src/css/App.css
+++ b/src/css/App.css
@@ -134,19 +134,26 @@
   flex-direction: row;
 }
 
-
 /*** Bar Space ***/
 .barSpace {
   width: 40%;
   height: 90%;
   background-color: rgb(0,0,0,0);
-  margin-left: 10%;
-  margin-top: 9.5%;
+  /*background-color: blue;*/
+  position: relative;
+  left: 10%;
+  top: 5%;
+}
+
+#testDiv {
+  background-color: yellow;
+  position: relative;
 }
 
 /*** Stop bar ***/
 .stopBar {
-  margin-left: 5%;
+  position: relative;
+  left: 10%;
   height: 100%;
   width: 20%;
   background-color: rgb(0,0,0,0);
