--- a/src/css/Info.css
+++ b/src/css/Info.css
@@ -1,7 +1,8 @@
 #infoDiv {
   height: 100vh;
   width: 100%;
-  margin-top: 5%;
+  position: relative;
+  top: 5%;
   font-family: 'helvetica';
 }
 
@@ -10,6 +11,8 @@
 }
 
 #bodyDiv {
-  margin-left: 25%;
+  position: relative;
+  left: 25%;
+  top: 2.5%;
   width: 50%;
 }
