--- a/src/css/Info.css
+++ b/src/css/Info.css
@@ -9,14 +9,14 @@
 }
 
 #bodyDiv {
-  margin-bottom: 7%;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
+  margin-bottom: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 #sourceContainer {
   background-color: white;
-  height: 7%;
+  height: 50px;
   position: fixed;
   left: 0px;
   bottom: 0px;
@@ -25,9 +25,19 @@
 
 }
 
-#source {
-  text-align: right;
+.footer {
   position: relative;
-  bottom: 35%;
-  right: 3%;
+  width: 50%;
+  bottom: 15px;
+}
+
+#back {
+  float: left;
+  left: 20px;
+}
+
+#source {
+  float: right;
+  text-align: right;
+  right: 20px;
 }
